# data-corpora-KM-BERT-pine-tunning

./: .gitignore  build-jcdata-for-BERT-NER.py  download-jcdata.sh  pyproject.toml
export/jcdata/: config.json  filelist.txt
