[tool.poetry]
name = "data-corpora-km-bert-pine-tunning"
version = "0.1.0"
description = ""
authors = ["Junho Oh <pinedance@gmail.com>"]
readme = "README.md"
packages = [{include = "data_corpora_km_bert_pine_tunning"}]

[tool.poetry.dependencies]
python = "^3.8"
regex = "^2023.12.25"
jupyter = "^1.0.0"
ipykernel = "^6.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
